[gd_scene load_steps=4 format=3 uid="uid://dw4brgrpdpurf"]

[ext_resource type="Texture2D" uid="uid://oepiqx3br2c2" path="res://Misc/TestAssets/LightImage.png" id="1_w2h3s"]
[ext_resource type="Script" uid="uid://b60uuan0pjxph" path="res://Scripts/Objects/light_source.gd" id="2_t4ved"]
[ext_resource type="Texture2D" uid="uid://dv27xjbwfkacl" path="res://Misc/TestAssets/Lamp.png" id="3_6rl58"]

[node name="LightSource" type="PointLight2D"]
energy = 2.0
texture = ExtResource("1_w2h3s")
script = ExtResource("2_t4ved")

[node name="Grab" type="TextureButton" parent="."]
visible = false
light_mask = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -450.0
offset_right = -450.0
offset_bottom = -450.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 450)
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_6rl58")
stretch_mode = 3

[node name="LightTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -900.0
offset_top = -900.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 450)
texture = ExtResource("1_w2h3s")

[connection signal="button_down" from="Grab" to="." method="_on_grab_button_down"]
[connection signal="button_up" from="Grab" to="." method="_on_grab_button_up"]
